--- a/whisper-fine-tuning-event/requirements.txt
+++ b/whisper-fine-tuning-event/requirements.txt
@@ -1,4 +1,4 @@
-torch+cu116
+torch>=1.7+cu116
 torchaudio
 git+https://github.com/huggingface/transformers
 git+https://github.com/huggingface/datasets
