--- a/whisper-fine-tuning-event/requirements.txt
+++ b/whisper-fine-tuning-event/requirements.txt
@@ -1,5 +1,9 @@
-torch>=1.7
-torchaudio
+-f --extra-index-url https://download.pytorch.org/whl/cu113
+torch==1.12.1+cu113
+-f --extra-index-url https://download.pytorch.org/whl/cu113
+torchvision==0.13.1+cu113
+-f --extra-index-url https://download.pytorch.org/whl/cu113
+torchaudio==0.12.1
 git+https://github.com/huggingface/transformers
 git+https://github.com/huggingface/datasets
 librosa
