--- a/whisper-fine-tuning-event/requirements.txt
+++ b/whisper-fine-tuning-event/requirements.txt
@@ -1,6 +1,6 @@
-torch==1.12.1+cu113 -f --extra-index-url https://download.pytorch.org/whl/cu113
-torchvision==0.13.1+cu113 -f --extra-index-url https://download.pytorch.org/whl/cu113
-torchaudio==0.12.1 -f --extra-index-url https://download.pytorch.org/whl/cu113
+torch==1.12.1+cu113 -f https://download.pytorch.org/whl/torch_stable.html
+torchvision==0.13.1+cu113 -f https://download.pytorch.org/whl/torch_stable.html
+torchaudio==0.12.1 -f https://download.pytorch.org/whl/torch_stable.html
 git+https://github.com/huggingface/transformers
 git+https://github.com/huggingface/datasets
 librosa
